completed up to music research, missing an image and lats paragraph of research evaluation

--- a/report.tex
+++ b/report.tex
@@ -94,7 +94,24 @@ In addition to this,
 \subsection{Market Research}
 TO BE COMPLETED
 \subsection{Music Research}
-
+\begin{center}
+\includegraphics[scale=0.5]{5.png}
+\end{center}
+In musical theory, an interval is the distance between two notes or pitches. Typically, these are represented with tones and semitones, where tones are the base unit of an interval. Certain intervals appear particularly often within music and composition as they can provide key melodies. Such intervals include the perfect fifth, and major and minor thirds. These intervals, which are 7, 4 and 3 semitones above the base note respectively, make up the notes used in major and minor triads and are the intervals used in the harmonic table based on the following set of rules:\\
+\\
+\begin{itemize}
+\item Notes ascend by an interval of a fifth on the vertical axis.
+\item Notes ascend by an interval of a major third on one diagonal axis.
+\item Notes ascend by an interval of a minor third on the other diagonal axis.
+\end{itemize}
+This layout clusters complementary notes together, for example, all the notes in the C Major chord, namely C, E and G are adjoining. Scales are played by using simple, repeated patterns that can be transposed for playing in different keys. In this way, music can be easily and quickly created.\\
+\begin{center}
+\includegraphics[scale=0.7]{scale.png}
+\includegraphics[scale=1.5]{scale2.jpg}
+\end{center}
+Above is shown a comparison of the C major scale played on a harmonic table based keyboard (left) and on a conventional piano keyboard (right). The progression is enumerated from 1 to 8.\\
+\\
+Scales and triads can be transposed far more easily on a harmonic keyboard than on a conventional keyboard as the basic pattern is always retained. This is shown in the G major scale below:
 \subsection{Technical Research}
 \subsubsection{MIDI}
 
