finished music research with image

--- a/report.tex
+++ b/report.tex
@@ -112,8 +112,9 @@ This layout clusters complementary notes together, for example, all the notes in
 Above is shown a comparison of the C major scale played on a harmonic table based keyboard (left) and on a conventional piano keyboard (right). The progression is enumerated from 1 to 8.\\
 \\
 Scales and triads can be transposed far more easily on a harmonic keyboard than on a conventional keyboard as the basic pattern is always retained. This is shown in the G major scale below:
-
-
+\begin{center}
+\includegraphics[scale=0.5]{scale3.png}
+\end{center}
 \subsection{Technical Research}
 \subsubsection{MIDI}
 
