Updates since Interim Report

--- a/report.tex
+++ b/report.tex
@@ -34,6 +34,7 @@ Supervisor: Dr. Henrik Nilsson\\
 \part{Preliminary Text}
 \section{Concept}
 \subsection{ReacTogon Concept}
+test
 The \textit{`ReacTogon`}\cite{modin} is a concept instrument produced by Mark Burton in 2007. Described as a `chain-reactive performance arpeggiator’, it acts as a physical user interface to a synthesiser through the placement of tokens on an interactive surface. The surface itself is a grid of hexagons, where each hexagon represents a musical note on the Harmonic table\cite{wikipediaHarmTab} - a novel method of placing musically complementary notes together, providing an easy and intuitive way to create chords and melodic sequences.\\
 
 \begin{center}
@@ -353,7 +354,14 @@ TO BE COMPLETED
 
 \part{Project Meta-Comment}
 \section{Updates since Interim Report}
-There have been numerous updates to the project as a whole since the last report. 
+There have been numerous updates to the project as a whole since the last report. The most obvious change is the overhaul to the software frontend and graphical user interface. Placeholder graphics have been replaced with finalised, heavily improved designs for a more immersive and polished feel, this is described in detail in the User Interface Designs section. In addition to this, a menu system has been added, where most major functionality can be accessed. \\
+\\
+In terms of changes to functionality of the software, since the interim report we have implemented multiple grids; the \textit{Warp} tile; the ability to change grid tempo and instrument on the fly and saving and loading have been finished and added.\\
+\\
+The code has also been vastly improved in terms of efficiency, having completely rewritten the sound sequencer, decreasing memory usage and required CPU time.\\
+\\
+Overall, in terms of improvements and updates, we have attempted to turn what was effectively a prototype into a finished, complete product.\\
+
 TO BE COMPLETED
 \section{Time and Planning}
 TO BE COMPLETED
