--- a/report.tex
+++ b/report.tex
@@ -234,7 +234,7 @@ Our application is aimed to be used by a wide variety of people, with varying le
 \section{Software Design}
 We looked at the Reactogon and decided to expand upon it, please look at the functional requirements for this.
 \subsection{The Grids}
-OUr software would comprise of 6 layers; each layer being a grid. Each grid would have to be unique yet have different properties; this was the first clue to using OO design. Each grid would have a set of properties, these properties being:
+Our software would comprise of 6 layers; each layer being a grid. Each grid would have to be unique yet have different properties; this was the first clue to using OO design. Each grid would have a set of properties, these properties being:
 \begin{itemize}
 \item Each grid could be assigned a unique instrument, but needs to support changing it on the go during mid play. This suggested that a grid could be assigned its own channel in a MIDI sequencer. (Rees, 2001)
 
